# bot-telegram

./: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
asyncbot/: bot.py
asyncbot/data/: __init__.py  database.db  settings.py
asyncbot/errors/: errors.py
asyncbot/exservies/: request.py
asyncbot/handlers/: me_handlers.py  other_handlers.py  user_handlers.py
asyncbot/keyboards/: set_menu.py
asyncbot/lexicon/: lexicon.py
asyncbot/models/: methods.py  model.py
asyncbot/services/: services.py
asyncbot/views/: client_bot.py
utils/: utils.py  utilsdb.py
views/: base.py
