[tool.poetry]
name = "asyncbot"
version = "2.0.0"
description = "download music from youtube"
authors = ["Sergey Yavorsky <yavorskyserge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.2.0"
aiohttp = "^3.9.1"
alembic = "^1.13.0"
psycopg = "^3.1.15"
psycopg-binary = "^3.1.15"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
